--- a/config.yml
+++ b/config.yml
@@ -95,7 +95,7 @@ browserSync:
     - Google Chrome
   # Tunnel the Browsersync server through a random Public URL
   # -> http://randomstring23232.localtunnel.me
-  tunnel: false
+  tunnel: true
   reloadDelay: 50
   reloadDebounce: 750
 drupal:
