--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "highlightjs": "~8.8.0",
     "lodash": "~3.6.0",
     "drupal": "http://cgit.drupalcode.org/drupal/plain/misc/drupal.js?h=7.x",
-    "jquery": "~1.10.2"
+    "jquery": "~1.10.2",
+    "letteringjs": ""
   },
   "dependencies": {
     "eq.js": "~1.7.1",
