--- a/config.yml
+++ b/config.yml
@@ -60,6 +60,7 @@ patternLab:
   dest: dest/pattern-lab/
   injectFiles:
     - bower_components/modernizr/modernizr.js
+    - bower_components/letteringjs/jquery.lettering.js
   injectBower: true
 icons: # https://github.com/nfroidure/gulp-iconfont
   enabled: true
