re-add dest from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled files
-# dest/
+dest/
 src/scss/00-config/_icons.scss
 src/patterns/00-atoms/04-images/icons.mustache
 src/patternlab-css/*.css
