update gitignore for new build script

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ node_modules
 atlassian-ide-plugin.xml
 
 # exceptions
-!dist/dest
-!dist/bower_components
+!dist/support/dest
+!dist/support/bower_components
